# STM32DeskLamp

./: .gitignore  main.py  readme.md  stm32台灯进度说明.docx
ESP32_Firmware_Code/ESP32_Firmware/: pin_config.txt
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/: CMakeLists.txt
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/include/: service_core.h  svc_audio.h  svc_lighting.h
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/include/agents/: agent_baidu_asr.h  agent_baidu_tts.h  agent_lampmind.h  agent_mqtt.h
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/include/manager/: mgr_wifi.h
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/src/: service_core.c  svc_audio.c  svc_lighting.c
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/src/agents/: agent_baidu_asr.c  agent_baidu_tts.c  agent_lampmind.c  agent_mqtt.c
ESP32_Firmware_Code/ESP32_Firmware/components/3_Service/src/manager/: mgr_wifi.c
Python_MQTT_Lamp_Control_Panel/: README.md  app_config.json  lamp_control_panel.py  mosquitto_lan.conf  requirements-dev.txt  requirements.txt  start.bat  start_desktop.bat  start_laptop.bat
Python_MQTT_Lamp_Control_Panel/lamp_panel/: __init__.py  config_manager.py  mqtt_service.py  ui_app.py
Thesis_Data_Analysis/: parse_serial_logs.py  plot_7_1_2_crc_test.py  plot_7_1_3_encoder_test.py  plot_7_2_1_voice_latency.py  plot_7_3_csi_advanced.py  plot_7_3_csi_analysis.py  plot_7_3_csi_theory.py  plot_pwm_analysis.py  requirements.txt  数据处理指令集.md
智能台灯stm32端/: Project.uvprojx  stm32_Pin_Config.txt
(+45 files in other folders)
